# body_isosurface

./: .gitignore  CMakeLists.txt  Makefile  README.md  glm_wrapper.cpp  iso_surface_wrapper.cpp  unit_test.cpp  volume_wrapper.cpp
include/: BufferManagement.h  Camera.h  IsoSurface.h  MeshManagement.h  Shader.h  Slice.h  Timer.h  Transformation.h  Volume.h  Window.h  constant.h  utils.h
src/: BufferManagement.cpp  Camera.cpp  IsoSurface.cpp  MeshManagement.cpp  Shader.cpp  Slice.cpp  Timer.cpp  Transformation.cpp  Volume.cpp  Window.cpp  main.cpp
src/imgui/: imgui.cpp
src/shader/: fragment.glsl  vertex.glsl
